--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="styles/style.css">
+
     <title>P-ANDA</title>
 </head>
 
@@ -58,12 +60,12 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <div class="row p-5 bg-success bg-gradient d-flex align-items-center">
+                        <div class="row p-5 info-background bg-gradient d-flex align-items-center">
                             <div class="col-lg-7">
                                 <h1>Cool Dude Headphone</h1>
                                 <p>This is the best headphone in the world who just waste time of the funky world</p>
                                 <h1>$410</h1>
-                                <div class="btn btn-warning">Buy Now</div>
+                                <button class="btn-buy-now mt-3">Buy Now</button>
                             </div>
                             <div class="col-lg-5">
                                 <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
@@ -71,12 +73,12 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div class="row p-5 bg-success bg-gradient d-flex align-items-center">
+                        <div class="row p-5 info-background bg-gradient d-flex align-items-center">
                             <div class="col-lg-7">
                                 <h1>Cool Dude Headphone</h1>
                                 <p>This is the best headphone in the world who just waste time of the funky world</p>
                                 <h1>$410</h1>
-                                <div class="btn btn-warning">Buy Now</div>
+                                <button class="btn-buy-now mt-3">Buy Now</button>
                             </div>
                             <div class="col-lg-5">
                                 <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
@@ -84,12 +86,12 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div class="row p-5 bg-success bg-gradient d-flex align-items-center">
+                        <div class="row p-5 info-background bg-gradient d-flex align-items-center">
                             <div class="col-lg-7">
                                 <h1>Cool Dude Headphone</h1>
                                 <p>This is the best headphone in the world who just waste time of the funky world</p>
                                 <h1>$410</h1>
-                                <div class="btn btn-warning">Buy Now</div>
+                                <button class="btn-buy-now mt-3">Buy Now</button>
                             </div>
                             <div class="col-lg-5">
                                 <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
@@ -113,7 +115,7 @@
 
     <main>
         <!-- Categories  -->
-        <section class="container my-5">
+        <section class="container my-5 categories">
 
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 col-12">
@@ -152,7 +154,7 @@
                                 additional content. This content is a little bit longer.</p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="btn-buy-now">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -165,7 +167,7 @@
                                 content.</p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="btn-buy-now">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -179,7 +181,7 @@
                                 height action.</p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="btn-buy-now">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -198,7 +200,7 @@
                                 additional content. This content is a little bit longer.</p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="btn-buy-now">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -211,7 +213,7 @@
                                 content.</p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="btn-buy-now">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -225,7 +227,7 @@
                                 height action.</p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="btn-buy-now">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -234,12 +236,13 @@
 
         <!-- subscribe  -->
         <section style="height: 300px;"
-            class="container d-flex justify-content-center bg-info align-items-center mt-5 rounded-3" id="subscribe">
+            class="container d-flex justify-content-center info-background align-items-center mt-5 rounded-3"
+            id="subscribe">
             <div>
                 <h1>LET'S STAY IN TOUCH</h1>
                 <p>Get updates on sales,specials and more</p>
-                <input type="text" name="" id="" placeholder="Your E-mail"><br>
-                <button class="btn btn-warning">SUBMIT</button>
+                <input class="form-control" type="text" name="" id="" placeholder="Your E-mail"><br>
+                <button class="btn-buy-now">SUBMIT</button>
             </div>
 
 
